...
        return Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            FloatingActionButton.small(
              heroTag: 'settings_button',
              onPressed: () => _showSetGoalDialog(context, focusService),
              tooltip: 'Set Goal',
              child: const Icon(Icons.settings),
            ),
            const SizedBox(width: 16),
            FloatingActionButton.extended(
              heroTag: 'start_button',
              onPressed: focusService.startFocus,
              icon: const Icon(Icons.play_arrow),
              label: const Text('Start'),
            ),
          ],
        );

      case FocusUiState.runningFocus:
        return Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            // "Aside" button
            FloatingActionButton(
              heroTag: 'pause_button',
              onPressed: focusService.pauseFocus,
              tooltip: 'Pause',
              child: const Icon(Icons.pause),
            ),
            const SizedBox(width: 16),
            // Main FAB
            FloatingActionButton.extended(
              heroTag: 'rest_button',
...
        return Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            FloatingActionButton(
              heroTag: 'back_to_focus_button',
              onPressed: focusService.endBreak,
              tooltip: 'Back to Focus',
              child: const Icon(Icons.assignment),
            ),
            const SizedBox(width: 16),
            FloatingActionButton.extended(
              heroTag: 'skip_and_focus_button',
              onPressed: () {
                focusService.endBreak();
                focusService.startFocus();
              },
              icon: const Icon(Icons.fast_forward),
              label: const Text('Skip & Focus'),
            ),
          ],
        );

      case FocusUiState.goalMet:
        return FloatingActionButton.extended(
          heroTag: 'goal_met_button',
          onPressed: focusService.startBreak,
          icon: const Icon(Icons.free_breakfast),
          label: const Text('Start Rest'),
        );

      case FocusUiState.pausedRest:
        return Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
...
                          onPressed: () => Navigator.of(context).pop(false), // 返回 false 表示丢弃
                          child: const Text('Discard'),
                        ),
                        const SizedBox(width: 12),
                        FilledButton(
                          onPressed: () => Navigator.of(context).pop(true), // 返回 true 表示应用
                          child: const Text('Apply'),
                        ),
                      ],
                    ),
                    const SizedBox(height: 20),
                  ],
                );
...
